@@ -483,7 +483,7 @@ public class WorkerSinkTaskTest {
         workerTask.initializeAndStart();
         verifyInitializeTask();
 
-        Set<TopicPartition> newAssignment = new HashSet<>(Arrays.asList(TOPIC_PARTITION, TOPIC_PARTITION2, TOPIC_PARTITION3));
+        Set<TopicPartition> newAssignment = Set.of(TOPIC_PARTITION, TOPIC_PARTITION2, TOPIC_PARTITION3);
 
         when(consumer.assignment())
                 .thenReturn(INITIAL_ASSIGNMENT, INITIAL_ASSIGNMENT, INITIAL_ASSIGNMENT)
@@ -638,8 +638,8 @@ public class WorkerSinkTaskTest {
                 .thenReturn(INITIAL_ASSIGNMENT)
                 .thenReturn(Collections.singleton(TOPIC_PARTITION2))
                 .thenReturn(Collections.singleton(TOPIC_PARTITION2))
-                .thenReturn(new HashSet<>(Arrays.asList(TOPIC_PARTITION2, TOPIC_PARTITION3)))
-                .thenReturn(new HashSet<>(Arrays.asList(TOPIC_PARTITION2, TOPIC_PARTITION3)))
+                .thenReturn(Set.of(TOPIC_PARTITION2, TOPIC_PARTITION3))
+                .thenReturn(Set.of(TOPIC_PARTITION2, TOPIC_PARTITION3))
                 .thenReturn(INITIAL_ASSIGNMENT)
                 .thenReturn(INITIAL_ASSIGNMENT)
                 .thenReturn(INITIAL_ASSIGNMENT);
@@ -710,12 +710,12 @@ public class WorkerSinkTaskTest {
 
         when(consumer.assignment())
                 .thenReturn(INITIAL_ASSIGNMENT, INITIAL_ASSIGNMENT)
-                .thenReturn(new HashSet<>(Collections.singletonList(TOPIC_PARTITION2)))
-                .thenReturn(new HashSet<>(Collections.singletonList(TOPIC_PARTITION2)))
-                .thenReturn(new HashSet<>(Collections.singletonList(TOPIC_PARTITION2)))
-                .thenReturn(new HashSet<>(Arrays.asList(TOPIC_PARTITION2, TOPIC_PARTITION3)))
-                .thenReturn(new HashSet<>(Arrays.asList(TOPIC_PARTITION2, TOPIC_PARTITION3)))
-                .thenReturn(new HashSet<>(Arrays.asList(TOPIC_PARTITION2, TOPIC_PARTITION3)));
+                .thenReturn(Set.of(TOPIC_PARTITION2))
+                .thenReturn(Set.of(TOPIC_PARTITION2))
+                .thenReturn(Set.of(TOPIC_PARTITION2))
+                .thenReturn(Set.of(TOPIC_PARTITION2, TOPIC_PARTITION3))
+                .thenReturn(Set.of(TOPIC_PARTITION2, TOPIC_PARTITION3))
+                .thenReturn(Set.of(TOPIC_PARTITION2, TOPIC_PARTITION3));
 
         INITIAL_ASSIGNMENT.forEach(tp -> when(consumer.position(tp)).thenReturn(FIRST_OFFSET));
         when(consumer.position(TOPIC_PARTITION3)).thenReturn(FIRST_OFFSET);
